# llm-extraction-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  project_spec.md  pyproject.toml
.github/workflows/: tests.yml
data/corrections/: example_correction.json
data/gold/: gold_v1.jsonl  gold_v2.jsonl
data/reports/: baseline_inspection_v1_v2.md  baseline_v2_eval.md  baseline_v2_failure_review_detailed.md  baseline_v2_v3_v3_1_comparison.md  baseline_v3_1_failure_review.md  baseline_v3_eval.md  gold_v2_dataset_summary.md  reliability_v1_report.md
docs/: demo_examples.md  deployment.md  human_review_workflow.md  labeling_policy_v2.md  local_inference.md  project_writeup.md
scripts/: run_eval.py  run_extract.py
src/: api.py  evaluate.py  extractor.py  llm_client.py  prompt.py  schemas.py
tests/: test_api.py  test_evaluate.py  test_extractor.py  test_llm_client.py  test_prompt.py  test_run_extract.py  test_schemas.py
